Actualizar libros... versión 2

--- a/Cocoteca/Views/EditarLibro/EditarLibro.cshtml
+++ b/Cocoteca/Views/EditarLibro/EditarLibro.cshtml
@@ -35,7 +35,7 @@
                         <br><h1 class="mb-3" style="text-align: center; color: #1f1f1f"> REGISTRO DE LIBROS</h1><br>
 
                      <div class="input-group mb-3 ">
-                         <p asp-for="Idlibro" type="text" class="form-control" value=@ViewBag.id aria-label="ISBN" aria-describedby="basic-addon1">@ViewBag.id</p>
+                            <input asp-for="Idlibro" type="text" class="form-control" value=@ViewBag.id aria-label="ISBN" aria-describedby="basic-addon1" readonly>
                         </div>
 
                         <div class="input-group mb-3 ">
