--- a/Cocoteca/Views/EditarLibro/EditarLibro.cshtml
+++ b/Cocoteca/Views/EditarLibro/EditarLibro.cshtml
@@ -1,22 +1,13 @@
 ﻿@model Cocoteca.Models.Cliente.Equipo_3.MtoCatLibros;
 @{
     ViewData["Title"] = "EditarLibro";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
 <html>
 <head>
     <title>Alta de libro</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel=StyleSheet href="css/custom.css" type="text/css" media=screen>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link rel=StyleSheet href="~/css/custom.css" type="text/css" media=screen>
 
 </head>
 <body>
@@ -34,26 +25,36 @@
                     <div class=" m-4 p-4" style=" background-color:#FFD1BD; font-family: 'Raleway', sans-serif;">
                         <br><h1 class="mb-3" style="text-align: center; color: #1f1f1f"> REGISTRO DE LIBROS</h1><br>
 
-                     <div class="input-group mb-3 ">
+                        <div class="input-group mb-3 ">
                             <input asp-for="Idlibro" type="text" class="form-control" value=@ViewBag.id aria-label="ISBN" aria-describedby="basic-addon1" readonly>
                         </div>
 
                         <div class="input-group mb-3 ">
-                            <input asp-for="Isbn" type="text" class="form-control" placeholder="ISBN..." aria-label="ISBN" aria-describedby="basic-addon1">
-                        </div>
-
-                        <div class="input-group mb-3">
-                            <input asp-for="Titulo" type="text" class="form-control" placeholder="Título..." aria-label="TITULO" aria-describedby="basic-addon1">
-                        </div>
-                        <div class="input-group mb-3">
-                            <input asp-for="Autor" type="text" class="form-control" placeholder="Autor..." aria-label="AUTOR" aria-describedby="basic-addon1">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" style="background-color: #e4784a; color: #FFFAF3">ISBN:</span>
+                            </div>
+                            <input asp-for="Isbn" type="text" class="form-control" value=@ViewBag.isbn aria-label="ISBN" aria-describedby="basic-addon1">
                         </div>
 
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text" style="background-color: #e4784a; color: #e3e3e3">Sinopsis</span>
+                                <span class="input-group-text" style="background-color: #e4784a; color: #FFFAF3">Titulo:</span>
                             </div>
-                            <textarea asp-for="Sinopsis" class="form-control" aria-label="SINOPSIS"></textarea>
+                            <input asp-for="Titulo" type="text" class="form-control" value=@ViewBag.titulo aria-label="TITULO" aria-describedby="basic-addon1">
+                        </div>
+                        
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" style="background-color: #e4784a; color: #FFFAF3">Autor:</span>
+                            </div>
+                            <input asp-for="Autor" type="text" class="form-control" value=@ViewBag.autor aria-label="AUTOR" aria-describedby="basic-addon1">
+                        </div>
+
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" style="background-color: #e4784a; color: #FFFAF3">Sinopsis</span>
+                            </div>
+                            <input asp-for="Sinopsis" type="text" class="form-control" value=@ViewBag.sinopsis aria-label="SINOPSIS"aria-describedby="basic-addon1" ></input>
                         </div>
 
                         <div class="input-group">
@@ -62,24 +63,40 @@
 
 
                         <div id="RadioButtonGroup" class="form-group">
-                            <label asp-for="Descontinuado" class="radio-inline">
-                                <input asp-for="Descontinuado" value="true" type="radio">Si
-                            </label>
-                            <label asp-for="Descontinuado" class="radio-inline">
-                                <input asp-for="Descontinuado" value="false" type="radio">No
-                            </label>
+                            @if (ViewBag.descontinuado == 1)
+                            {
+                                <label asp-for="Descontinuado" class="radio-inline">
+                                    <input asp-for="Descontinuado" value="true" type="radio">Si
+                                </label>
+                                <label asp-for="Descontinuado" class="radio-inline">
+                                    <input asp-for="Descontinuado" value="false" type="radio" checked>No
+                                </label>
+                            }
+                            else
+                            {
+                                <label asp-for="Descontinuado" class="radio-inline">
+                                    <input asp-for="Descontinuado" value="true" type="radio" checked>Si
+                                </label>
+                                <label asp-for="Descontinuado" class="radio-inline">
+                                    <input asp-for="Descontinuado" value="false" type="radio" >No
+                                </label>
+                            }
+
                         </div>
 
 
                         <div class="input-group mb-3">
-                            <input asp-for="Paginas" type="text" class="form-control" placeholder="Número de Páginas" aria-label="PAGINAS" aria-describedby="basic-addon1">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" style="background-color: #e4784a; color: #FFFAF3">Paginas:</span>
+                            </div>
+                            <input asp-for="Paginas" type="text" class="form-control" value=@ViewBag.paginas aria-label="PAGINAS" aria-describedby="basic-addon1">
                         </div>
 
 
                         <div class="form-group">
                             <label for="numeroRevision">Revisión</label>
                             <select asp-for="Revision" class="form-control" id="numeroRevision">
-                                <option selected disabled value="">Seleccione una Revisión...</option>
+                                <option selected value=@ViewBag.Revision>@ViewBag.Revision</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
@@ -90,11 +107,16 @@
                                 <option value="8">8</option>
                                 <option value="9">9</option>
                                 <option value="10">10</option>
+                                <option value="11">11</option>
+                                <option value="12">12</option>
                             </select>
                         </div>
 
                         <div class="input-group mb-3">
-                            <input asp-for="Ano" type="text" class="form-control" placeholder="Año..." aria-label="ANO" aria-describedby="basic-addon1">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" style="background-color: #e4784a; color: #FFFAF3">Año de creacion:</span>
+                            </div>
+                            <input asp-for="Ano" type="text" class="form-control" value=@ViewBag.ano aria-label="ANO" aria-describedby="basic-addon1">
                         </div>
 
 
@@ -102,41 +124,47 @@
                         <label for="basic-url">Precio</label>
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text" style="background-color: #e4784a; color: #e3e3e3">$</span>
+                                <span class="input-group-text" style="background-color: #e4784a; color: #FFFAF3">$</span>
                             </div>
-                            <input asp-for="Precio" type="text" class="form-control" aria-label="PRECIO">
-                            <div class="input-group-append">
-                                <span class="input-group-text" style="background-color: #e4784a; color: #e3e3e3">.00</span>
-                            </div>
+                            <input asp-for="Precio" type="text" value=@ViewBag.precio class="form-control" aria-label="PRECIO">
                         </div>
 
                         <div class="input-group mb-3">
-                            <input asp-for="Stock" type="text" class="form-control" placeholder="Cantidad en Stock..." aria-label="STOCK" aria-describedby="basic-addon1">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" style="background-color: #e4784a; color: #FFFAF3">Stock:</span>
+                            </div>
+                            <input asp-for="Stock" type="text" class="form-control" value=@ViewBag.stock aria-label="STOCK" aria-describedby="basic-addon1">
                         </div>
 
                         <div class="form-group">
                             <label for="numeroRevision">Editorial</label>
                             <select asp-for="Ideditorial" class="form-control" asp-items="ViewBag.Editoriales" id="EDITORIAL">
-                                <option selected disabled value="">Seleccione una Editorial...</option>
+                                <option disabled value="">Seleccione una Editorial...</option>
+                                <option selected value=@ViewBag.idEditorial>@ViewBag.nombreEditorial</option>
                             </select>
                         </div>
 
                         <div class="form-group">
                             <label for="numeroRevision">País</label>
-                            <select asp-for="Idpais" class="form-control" asp-items="ViewBag.Paises" id="PAIS">
-                                <option selected disabled value="">Seleccione un País...</option>
+                            <select asp-for="Idpais" class="form-control" asp-items="ViewBag.Paises" id="PAIS" >
+                                <option disabled value="">Seleccione un País...</option>
+                                <option selected value=@ViewBag.idpais>@ViewBag.nombrePais</option>
                             </select>
                         </div>
 
                         <div class="form-group">
                             <label for="numeroRevision">Categoría</label>
                             <select asp-for="Idcategoria" class="form-control" asp-items="ViewBag.Categorias" id="CATEGORIA">
-                                <option selected disabled value="">Seleccione una Categoría...</option>
+                                <option disabled value="">Seleccione una Categoría...</option>
+                                <option selected value=@ViewBag.idCategoria>@ViewBag.nombreCategoria</option>
                             </select>
                         </div>
 
                         <div class="input-group mb-3">
-                            <input asp-for="Imagen" type="text" class="form-control" placeholder="Link de Imagen..." aria-label="IMAGEN" aria-describedby="basic-addon1">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" style="background-color: #e4784a; color: #FFFAF3">Link imagen:</span>
+                            </div>
+                            <input asp-for="Imagen" type="text" class="form-control" value=@ViewBag.imagen aria-label="IMAGEN" aria-describedby="basic-addon1">
                         </div>
 
                         <button type="button" class="btn btn-lg btn-block btn-search" style="background-color: #EE8D11" data-toggle="modal" data-target="#altaModal">Guardar Libro y Continuar</button>
