--- a/Cocoteca/Views/Equipo_Tripas/Lista_Compras.cshtml
+++ b/Cocoteca/Views/Equipo_Tripas/Lista_Compras.cshtml
@@ -75,7 +75,8 @@
                                                                 <div class="media align-items-lg-center flex-column flex-lg-row p-3">
 
                                                                     <div class="d-inline-block">
-                                                                        <img src=@{
+                                                                        <img src=
+                                                                             @{
                                                                                  if (Longitud == 0)
                                                                                  {
                                                                                      @urlError;
