--- a/Cocoteca/Views/Shared/_LoginPartial.cshtml
+++ b/Cocoteca/Views/Shared/_LoginPartial.cshtml
@@ -14,29 +14,50 @@
 
             </form>
         </li>
+        @if (User.IsInRole("Admin") || User.IsInRole("Super Admin"))
+        {
+            <li class="nav-item" style="padding-left: 0px; padding-right: 0px;">
+                <form class="form-inline" asp-controller="TodosLibros" asp-action="DevolverLista" method="post">
+                    <button type="submit" class="nav-link btn btn-dark" href="#"> Ir a almacen </button>
+                </form>
+            </li>
+        }
 
     </ul>
-    <li class="nav-item"><a class="btn btn-light btn-circle" style="margin: 0px 10px 0px 10px;"><img class="carrito" src="~/carrito.png" alt="carrito" style="width:30px; height:30px"> </a></li>
-    
- }
+    @if (!User.IsInRole("Almacenista"))
+    {
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img class="carrito" src="~/carrito.png" alt="carrito" style="width:30px; height:30px">
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Ir al carrito</a>
+                    <a class="dropdown-item" asp-controller="Equipo_Tripas" asp-action="Lista_Compras">Lista de pedidos</a>
+                </div>
+            </li>
+        </ul>
+    }
+
+}
 else
 {
-<ul class="navbar-nav">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="btn btn-comprar" asp-area="Identity" asp-page="/Account/Register">Registrate</a>
+        </li>
+    </ul>
     <li class="nav-item">
-        <a class="btn btn-comprar" asp-area="Identity" asp-page="/Account/Register">Registrate</a>
-    </li>
-</ul>
-<li class="nav-item">
-    <a asp-area="Identity" asp-page="/Account/Login">
-        <div class="box-1">
-            <div class="btn btn-one">
-                <span><img src="~/usuario.png" style="width:30px; height:30px">Inicia sesi&oacute;n</span>
+        <a asp-area="Identity" asp-page="/Account/Login">
+            <div class="box-1">
+                <div class="btn btn-one">
+                    <span><img src="~/usuario.png" style="width:30px; height:30px">Inicia sesi&oacute;n</span>
+                </div>
             </div>
-        </div>
-    </a>
-</li>
-@*<li class="nav-item">
-        <a class="nav-link" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>*@
+        </a>
+    </li>
+    @*<li class="nav-item">
+            <a class="nav-link" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        </li>*@
 }
 
