Correcion de Errores en Registro de Cliente y Admin
También se tradujeron algunas cosas.

--- a/Areas/Identity/Pages/Account/Manage/Direccion.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Direccion.cshtml
@@ -46,7 +46,7 @@
                 <input asp-for="Input.NoInt" class="form-control" />
                 <span asp-validation-for="Input.NoInt" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Actualizar dirección</button>
+            <button type="submit" class="btn btn-search">Actualizar dirección</button>
         </form>
     </div>
 </div>
