--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -26,7 +26,7 @@
                 <input asp-for="Input.Apellido" class="form-control" />
                 <span asp-validation-for="Input.Apellido" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Actualizar datos</button>
+            <button type="submit" class="btn btn-search">Actualizar datos</button>
         </form>
         @if (User.IsInRole("Cliente"))
         {
