--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -3,10 +3,10 @@
     Layout = "/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Manage your account</h1>
+<h1>Gestiona tu cuenta</h1>
 
 <div>
-    <h4>Change your account settings</h4>
+    <h4>Cambia la configuraci&oacute;n de tu cuenta</h4>
     <hr />
     <div class="row">
         <div class="col-md-3">
