--- a/Views/Busqueda/Carruselbusqueda.cshtml
+++ b/Views/Busqueda/Carruselbusqueda.cshtml
@@ -53,8 +53,12 @@
                                             <h5 class="card-text">@bus.Autor</h5>
                                             <h5 class="card-text">Precio: </h5>
                                             <h5 class="card-text">$ @bus.Precio cocoins</h5>
-                                            <a class="btn btn-comprar" href="#">Comprar</a>
-                                            <a class="btn btn-comprar" href="#">Añadir al carrito</a>
+                                            <div class="d-flex justify-content-between align-items-center">
+                                                <div class="btn-group">
+                                                    <button class="btn btn-sm btn-outline-secondary" style="background-color:#F2BF2C"><a asp-controller="Equipo_Tripas" asp-action="Libro_Vista" asp-route-id="@bus.Idlibro">Ver Libro</a></button>
+                                                    <button class="btn btn-sm btn-outline-secondary" style="background-color:#FCA12D"><a asp-controller="ClienteInicio" asp-action="GenerarCarrito" asp-route-id="@bus.Idlibro">Agregar a Carrito</a></button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -81,8 +85,12 @@
                                             <h5 class="card-text">@bus.Autor</h5>
                                             <h5 class="card-text">Precio: </h5>
                                             <h5 class="card-text">$ @bus.Precio cocoins </h5>
-                                            <a class="btn btn-comprar" href="#">Comprar</a>
-                                            <a class="btn btn-comprar" href="#">Añadir al carrito</a>
+                                            <div class="d-flex justify-content-between align-items-center">
+                                                <div class="btn-group">
+                                                    <button class="btn btn-sm btn-outline-secondary" style="background-color:#F2BF2C"><a asp-controller="Equipo_Tripas" asp-action="Libro_Vista" asp-route-id="@bus.Idlibro">Ver Libro</a></button>
+                                                    <button class="btn btn-sm btn-outline-secondary" style="background-color:#FCA12D"><a asp-controller="ClienteInicio" asp-action="GenerarCarrito" asp-route-id="@bus.Idlibro">Agregar a Carrito</a></button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
