--- a/Views/Tarjeta/Tarjeta.cshtml
+++ b/Views/Tarjeta/Tarjeta.cshtml
@@ -3,67 +3,53 @@
     ViewData["Title"] = "Tarjeta";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h1>Tarjeta</h1>
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Validacion de tarjeta de Credito </title>
-
-</head>
-
-<body>
-    <div class="creditCardForm">
-        <div class="heading">
-            <h1>Confirmar Pago</h1>
-        </div>
-        <div class="payment">
-            <form>
-                <div class="form-group owner">
-                    <label for="owner">Titular</label>
-                    <input type="text" class="form-control" id="owner">
-                </div>
-                <div class="form-group CVV">
-                    <label for="cvv">CVV</label>
-                    <input type="text" class="form-control" id="cvv">
-                </div>
-                <div class="form-group" id="card-number-field">
-                    <label for="cardNumber">Numero de Tarjeta</label>
-                    <input type="text" class="form-control" id="cardNumber">
-                </div>
-                <div class="form-group" id="expiration-date">
-                    <label>Fecha de expiracion</label>
-                    <select>
-                        <option value="01">Enero</option>
-                        <option value="02">Febrero </option>
-                        <option value="03">Marzo</option>
-                        <option value="04">Abril</option>
-                        <option value="05">Mayo</option>
-                        <option value="06">Junio</option>
-                        <option value="07">Julio</option>
-                        <option value="08">Agosto</option>
-                        <option value="09">Septiembre</option>
-                        <option value="10">Octubre</option>
-                        <option value="11">Noviembre</option>
-                        <option value="12">Diciembre</option>
-                    </select>
-                    <select>
-                        <option value="21"> 2021</option>
-                        <option value="22"> 2022</option>
-                        <option value="23"> 2023</option>
-                        <option value="24"> 2024</option>
-                        <option value="25"> 2025</option>
-                        <option value="26"> 2026</option>
-                    </select>
-                </div>
-                <div class="form-group" id="pay-now">
-                    <button type="submit" class="btn btn-default" id="confirm-purchase">Confirmar</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</body>
-</html>
-</html>
+@model Cocoppel.Models.TarjetaCredito
+<h2>Metodo de pago</h2>
+@if (!string.IsNullOrEmpty(ViewBag.Error))
+{
+    <div class="error">@ViewBag.Error</div>
+}
+<form action ="/tarjeta/Tarjeta" method="POST">
+    <label for="login">Numero de Tarjeta:</label>
+    <input type="text" name="Numero" value="@(Model!=null ? Model.Numero : string.Empty)" />
+    <br />
+    <label for="password">Titular:</label>
+    <input type="text" name="Titular" value="@(Model!=null ? Model.Titular : string.Empty)" />
+    <br />
+    <label for="password">Cvv:</label>
+    <input type="text" name="Cvv" />
+    <br />
+    <label>Fecha de expiracion</label>
+    <select name="Mes">
+        <option value="01">Enero</option>
+        <option value="02">Febrero </option>
+        <option value="03">Marzo</option>
+        <option value="04">Abril</option>
+        <option value="05">Mayo</option>
+        <option value="06">Junio</option>
+        <option value="07">Julio</option>
+        <option value="08">Agosto</option>
+        <option value="09">Septiembre</option>
+        <option value="10">Octubre</option>
+        <option value="11">Noviembre</option>
+        <option value="12">Diciembre</option>
+    </select>
+    <select name="Año">
+        <option value="21"> 2021</option>
+        <option value="22"> 2022</option>
+        <option value="23"> 2023</option>
+        <option value="24"> 2024</option>
+        <option value="25"> 2025</option>
+        <option value="26"> 2026</option>
+    </select>
+    <br />
+    <label> Tipo de tarjeta</label>
+    <br />
+    <input type="radio" id="Credito" name="Tipo" value="Credito">
+    <label for="Credtio">Credito</label>
+    <br />
+    <input type="radio" id="Debito" name="Tipo" value="Debito">
+    <label for="Debito">Debito</label>
+    <br />
+    <input type="submit" value="Enviar" />
+</form> 
